Add pandas, openpyxl, reportlab for reports

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-flask
-flask_sqlalchemy
+Flask
+Flask-SQLAlchemy
+Werkzeug
+psycopg2-binary
+pandas
+openpyxl
+reportlab
 gunicorn
-psycopg2-binary
-werkzeug
-openpyxl
-reportlab
-flask
-flask_sqlalchemy
-werkzeug
-openpyxl
-reportlab
-psycopg2-binary
