Add psycopg2-binary for PostgreSQL

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-Flask
-Flask-SQLAlchemy
+flask
+flask_sqlalchemy
 gunicorn
-pandas
+psycopg2-binary
+werkzeug
+openpyxl
 reportlab
+flask
+flask_sqlalchemy
+werkzeug
+openpyxl
+reportlab
+psycopg2-binary
