Fix 502 deploy issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask
-Flask-SQLAlchemy
-Werkzeug
+flask
+flask_sqlalchemy
+gunicorn
 psycopg2-binary
 pandas
-openpyxl
 reportlab
-gunicorn
+openpyxl
